# simple_glomap

./: CMakeLists.txt  README.md
glomap/: glomap.cc  types.h
glomap/controllers/: global_mapper.cc  global_mapper.h  option_manager.cc  option_manager.h  track_establishment.cc  track_establishment.h
glomap/estimators/: bundle_adjustment.cc  bundle_adjustment.h  cost_function.h  global_positioning.cc  global_positioning.h  global_rotation_averaging.cc  global_rotation_averaging.h  gravity_refinement.cc  gravity_refinement.h  optimization_base.h  relpose_estimation.cc  relpose_estimation.h  view_graph_calibration.cc  view_graph_calibration.h
glomap/io/: colmap_converter.cc  colmap_converter.h  gravity_io.h
glomap/math/: gravity.h  l1_solver.h  rigid3d.h  tree.cc  tree.h  two_view_geometry.cc  two_view_geometry.h  union_find.h
glomap/processors/: image_pair_inliers.cc  image_pair_inliers.h  image_undistorter.cc  image_undistorter.h  relpose_filter.h  track_filter.h  view_graph_manipulation.cc  view_graph_manipulation.h
glomap/scene/: camera.h  image.h  image_pair.h  track.h  types.h  types_sfm.h  view_graph.h
third/colmap/controllers/: record.md
third/colmap/estimators/: essential_matrix.h  fundamental_matrix.h  homography_matrix.h  manifold.h  record.md  two_view_geometry.cc  two_view_geometry.h
third/colmap/exe/: record.md
third/colmap/feature/: record.md  types.h
third/colmap/geometry/: essential_matrix.cc  essential_matrix.h  homography_matrix.cc  homography_matrix.h  pose.cc  pose.h  record.md  triangulation.cc  triangulation.h
third/colmap/image/: record.md
third/colmap/math/: record.md
third/colmap/mvs/: record.md
third/colmap/optim/: loransac.h  record.md
third/colmap/retrieval/: record.md
third/colmap/scene/: camera.h  database.cc  database.h  record.md
third/colmap/sensor/: models.h  record.md
third/colmap/sfm/: record.md
third/colmap/tools/: record.md
third/colmap/ui/: record.md
third/colmap/util/: misc.h  record.md
